Workaround for the newly introduced KHTML bug (crashes when using the KHTMLPart constructor with KHTMLView argument or when creating a KHTMLView alone). Patch by Yan Morin.

BUG: 109962